--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aos": "^2.3.4",
     "axios": "^1.7.7",
     "localforage": "^1.10.0",
+    "lottie-react": "^2.4.0",
     "match-sorter": "^7.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
