--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-parallax": "^3.5.1",
     "react-router-dom": "^6.27.0",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.14.5",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
